# verb

./: README.md  setup.cfg
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html  verb.ipynb
docs/_modules/: index.html  verb.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docs/_sources/module_docs/: verb.rst.txt
docs/module_docs/: verb.html
docsrc/: table_of_contents.rst
docsrc/module_docs/verb/: util.rst
docsrc/module_docs/verb/tests/: misc_test.rst
verb/: __init__.py  util.py
verb/examples/: mongo.py  translations.py
verb/tests/: misc_test.py
