[metadata]
name = verb
version = 0.1.5
url = https://github.com/i2mint/verb
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Easy make mini-languages to do python things.
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		parser
		interpreter
		programming language
		command line
display_name = verb

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	lined

